# trafodion

./: .clang-format  .clang-format-diff.py  .gitattributes  .gitignore  .rat-excludes  CMakeLists.txt  Makefile  build_easily.sh  env.sh  sqlci_lex.cpp  sqlci_yacc.cpp  sqlci_yacc.output  version_matrix
core/sql/: .gitignore  CMakeLists.txt  pom.xml  pom.xml.apache  pom.xml.hdp
core/sql/SqlCompilerDebugger/: BreakpointDialog.ui  ExeQueueDisplay.h  ExportFunctionSqlCmpDbg.cpp  ItemExpressionView.cpp  ItemExpressionView.h  MainWindow.cpp  MainWindow.h  PropDialog.h  QueryAnalysisView.h  QueryMemoView.cpp  QueryMemoView.h  QueryTreeView.cpp  QueryTreeView.h  SqlCmpDbg.pro  TCBTreeView.cpp  TCBTreeView.h  TDBDlgExprList.cpp  TDBDlgExprList.h  TDBDlgMdamNet.h  TDBTreeView.cpp  TDBTreeView.h  cln.sh  mk.sh
core/sql/arkcmp/: ApplicationFile.cpp  ApplicationFile2.cpp  CmpCommon.cpp  CmpConnection.cpp  CmpContext.cpp  CmpContext.h  CmpEHCallBack.cpp  CmpErrLog.cpp  CmpISPUtils.cpp  CmpProdRegc.cpp  CmpSqlSession.cpp  CmpSqlSession.h  CmpStatement.cpp  CmpStatement.h  CmpStoredProc.cpp  CompException.cpp  CompException.h  ExtQualModuleNames.cpp  NATableSt.cpp  NATableSt.h  ProcessEnv.cpp  QueryCacheSt.cpp  SPUtil.cpp  SQLJFile.cpp  VersioningStoredProc.cpp  cmpargs.cpp  cmpargs.h  cmpmod.cpp  mxCompileUserModule.cpp  mxCompileUserModuleMain.cpp  mxCompileUserModuleStubs.cpp  mxCompileUserModuleStubs2.cpp  vers_libarkcmp.cpp
core/sql/cli/: Cli.cpp  Cli.h  CliExpExchange.cpp  CliExtern.cpp  CliImplLmExtFunc.cpp  Context.cpp  Context.h  Descriptor.cpp  Descriptor.h  ExSqlComp.cpp  ExSqlComp.h  Globals.cpp  Globals.h  GlobalsDef.cpp  Module.cpp  SQLCLIdev.h  SessionDefaults.cpp  SessionDefaults.h  Statement.cpp  Statement.h  StoredProcInterface.cpp  TestDriver.cpp  memorymonitor.cpp  muse.cpp  sql_id.cpp  sqlcli.h  srlversion.cpp  stubs.cpp  vers_libcli.cpp
core/sql/clitest/: blobtest.cpp  blobtest.h
core/sql/comexe/: CmpMessage.cpp  CmpMessage.h  ComASNodes.cpp  ComASNodes.h  ComCompressionInfo.cpp  ComCompressionInfo.h  ComExeAll.cpp  ComExtractInfo.cpp  ComKeyMDAM.cpp  ComKeyMDAM.h  ComKeyRange.cpp  ComKeySingleSubset.cpp  ComQueue.cpp  ComQueue.h  ComResourceInfo.cpp  ComTdb.cpp  ComTdb.h  ComTdbAll.h  ComTdbCancel.cpp  ComTdbCompoundStmt.cpp  ComTdbConnectBy.cpp  ComTdbConnectBy.h  ComTdbConnectByTempTable.cpp  ComTdbConnectByTempTable.h  ComTdbControl.cpp  ComTdbControl.h  ComTdbDDL.cpp  ComTdbDDL.h  ComTdbExeUtil.cpp  ComTdbExeUtil.h  ComTdbExplain.cpp  ComTdbFastTransport.cpp  ComTdbFastTransport.h  ComTdbFirstN.cpp  ComTdbHashGrby.cpp  ComTdbHashj.cpp  ComTdbHashj.h  ComTdbHbaseAccess.cpp  ComTdbHbaseAccess.h  ComTdbHdfsScan.cpp  (+49 more)
core/sql/common/: BaseTypes.cpp  BaseTypes.h  BigNumHelper.cpp  BloomFilter.cpp  BloomFilter.h  CharType.cpp  CharType.h  ClusteredBitmap.cpp  ClusteredBitmap.h  CmpCommon.h  ColIndList.cpp  Collections.cpp  Collections.h  ComAll.cpp  ComAllInExe.cpp  ComAnsiNamePart.cpp  ComCGroup.cpp  ComCGroup.h  ComCextMisc.cpp  ComDDLLicense.cpp  ComDistribution.cpp  ComEncryption.cpp  ComEncryption.h  ComExeTrace.cpp  ComExtents.cpp  ComGuardianFileNameParts.cpp  ComJSON.cpp  ComJSON.h  ComJSONFuncs.cpp  ComLocationNames.cpp  ComMPLoc.cpp  ComMemLog.cpp  ComMemLog.h  ComMisc.cpp  ComMisc.h  ComMvAttributeBitmap.cpp  ComMvAttributeBitmap.h  ComObjectName.cpp  ComObjectName.h  ComOptIncludes.h  (+122 more)
core/sql/eh/: EHAbort.cpp  EHException.cpp  EHJmpBufNode.cpp  EHJmpBufStack.cpp  test1.cpp  test2.cpp  test3.cpp  vers_libeh.cpp
core/sql/executor/: Allocator.cpp  AvroFileReader.cpp  AvroFileReader.h  AvroFileWriter.cpp  AvroFileWriter.h  BufferList.cpp  BufferReference.cpp  CliMsgObj.cpp  DistributedLock_JNI.cpp  DistributedLock_JNI.h  ExAll.cpp  ExBitMapTable.cpp  ExCancel.cpp  ExComTdb.cpp  ExCompoundStmt.cpp  ExConnectBy.cpp  ExConnectBy.h  ExConnectByTempTable.cpp  ExConnectByTempTable.h  ExControlArea.cpp  ExDDLValidator.h  ExDupSqlBuffer.cpp  ExExeUtil.cpp  ExExeUtil.h  ExExeUtilCli.cpp  ExExeUtilCli.h  ExExeUtilCommon.cpp  ExExeUtilConnectby.cpp  ExExeUtilExplain.cpp  ExExeUtilGet.cpp  ExExeUtilGetStats.cpp  ExExeUtilLoad.cpp  ExExeUtilMisc.cpp  ExExeUtilSuspend.cpp  ExExeUtilVolTab.cpp  ExExplain.cpp  ExFastTransport.cpp  ExFastTransport.h  ExFirstN.cpp  ExHbaseAccess.cpp  (+157 more)
core/sql/exp/: ExpAlignedFormat.cpp  ExpAlignedFormat.h  ExpAtp.cpp  ExpAtp.h  ExpAvroInterface.cpp  ExpAvroInterface.h  ExpBitMuxFunction.cpp  ExpComposite.cpp  ExpComposite.h  ExpCompressionWA.cpp  ExpCompressionWA.h  ExpConvMxcs.cpp  ExpCriDesc.cpp  ExpCriDesc.h  ExpDll.cpp  ExpError.cpp  ExpError.h  ExpErrorEnums.h  ExpHbaseDefs.h  ExpHbaseInterface.cpp  ExpHbaseInterface.h  ExpLOB.cpp  ExpLOB.h  ExpLOBV2.cpp  ExpLOBaccess.cpp  ExpLOBaccess.h  ExpLOBenums.h  ExpLOBexternal.h  ExpLOBinterface.cpp  ExpLOBinterface.h  ExpLOBprocess.cpp  ExpLOBstats.cpp  ExpLOBstats.h  ExpLobOperV2.cpp  ExpLobOperV2.h  ExpORCinterface.cpp  ExpORCinterface.h  ExpPCode.cpp  ExpPCode.h  ExpPCodeClauseGen.cpp  (+60 more)
core/sql/export/: ComDiags.cpp  ComDiags.h  ComMemoryDiags.cpp  ExportDll.cpp  FBString.h  HeapID.cpp  HeapLog.cpp  IpcMessageObj.cpp  NAAbort.cpp  NABasicObject.cpp  NAStringDef.cpp  NAStringDef.h  NAVersionedObject.cpp  NAVersionedObject.h  srlversion.cpp  vers_libtdm_sqlexport.cpp
core/sql/generator/: GenAll.cpp  GenBitMuxFunction.cpp  GenExpGenerator.cpp  GenExpGenerator.h  GenExplain.cpp  GenFastTransport.cpp  GenFlowControlFunction.cpp  GenItemComposite.cpp  GenItemExpr.cpp  GenItemFunc.cpp  GenItemSampling.cpp  GenKey.cpp  GenMapTable.cpp  GenMapTable.h  GenMdamPred.cpp  GenPartFunc.cpp  GenPreCode.cpp  GenProbeCache.cpp  GenRel3GL.cpp  GenRelDCL.cpp  GenRelEnforcer.cpp  GenRelExeUtil.cpp  GenRelExpr.cpp  GenRelGrby.cpp  (+18 more)
(+6403 files in other folders)
